[package]
name = "combos"
version = "0.1.0"
description = "Print all permutations of a word list"
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/digitalsanctum/combos"
homepage = "https://github.com/digitalsanctum/combos"
keywords = ["cli", "combos", "permumations", "tools", "shell"]

[dependencies]
itertools = "0.10.3"

